--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
+# --------------------------------------
+# Build output
+# --------------------------------------
+dist/
+dist-ssr/
+
+# --------------------------------------
+# Environment variables
+# --------------------------------------
+.env
+*.local
+
+# --------------------------------------
+# Node modules
+# --------------------------------------
+node_modules/
+
+# --------------------------------------
 # Logs
-logs
+# --------------------------------------
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,17 +26,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-.env
-
-# Editor directories and files
-.vscode/*
+# --------------------------------------
+# Editor/IDE settings
+# --------------------------------------
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+
+# Visual Studio / JetBrains
 *.suo
 *.ntvs*
 *.njsproj
