--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "thewoodbench",
+  "description": "Frontend del sitio WoodBench. Blog, contenido para carpinteros e inspiración para creadores.",
+  "author": "Agustín Palisa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,18 +28,20 @@
     "react-i18next": "^15.1.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.11.0",
+    "prettier": "^3.5.3",
     "vite": "^5.4.10"
   }
 }
